- added getIOHandle(InputStream, OutputStream) to SleepUtilities class
- registered cmp operator to prevent parser confusing it with a function
- hashes/arrays can now be passed as named parameters to closures
- &size now works with hashes
- the '.' command in the console interact mode will not repeat the last
  code sequence if no new code has been specified.

2.1-beta 15  (25 Apr 07)
===========
- fixed a potential problem that could arise when one attempts to 
  query which file is currently executing and no file is executing.
- made the ProxyInterface class in sleep.engine public.  For those of you
  looking to embed Sleep,  a Sleep closure backed instance of a  Java 
  interface may be the way to go.  Using the ProxyInterface class you
  can create these closure backed instances and you get all of the built-in
  function call tracing, profiling, error checking, etc. for free.
- the outer most frame of execution for running a Sleep script now enjoys
  the same thread safety/synrchronization that the rest of the Sleep
  functionality adheres to.
- exit() function now allows an optional string parameter which will be 
  reported to the user as a runtime warning (usually an indicator of why
  the script chose to exit?)
- added an assert command.  assert takes a predicate expression as a 
  parameter.  if the predicate expression does not evaluate to true then
  the currently running script will exit with the message "assertion
  failed".
- HOES expressions with no arguments following the : will report a 
  syntax error (originally this error was crashing the parser)
- Proxy instantiations of Java classes are now synchronized in the same
  way as the rest of Sleep's interpreter and source information is now
  installed to show calls on these classes as coming from <Java>
- fixed a bug that disallowed importing multiple packages from a single
  external jar file.  
- unloading a script through ScriptLoader now causes the entire block