@@ -1,0 +1,3 @@
+&closure[eval:1-2]#2
+Hello from 'new closure'!
+bars x var is kewlios
